resolves:fdo#54629 vcl:gdi add recursive check

check all font fallback levels if rRect.IsEmpty() is true for
specific level.

Change-Id: I8eebde2196d6551ddcf9d020afa3a157c809710c